samples/_failures_safe/1761005508_1b6875_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eac8f2a.c: In function ‘main’:
./samples/SAFE/__tmp_2eac8f2a.c:151:43: error: missing terminating " character
  151 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_2eac8f2a.c:151:21: error: expected expression at end of input
  151 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2eac8f2a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2eac8f2a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2eac8f2a.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2eac8f2a.c:151:21: error: expected declaration or statement at end of input
